# iatwa

./: .gitignore  CMakeLists.txt  bmp3.c  bmp3_defs.h  bmp_integration.c  bmp_integration.h  dps368.c  dps368.h  main.c  main_integration.c  main_integration.h  ms5607.c  ms5607.h  ms5611.c  ms5611.h  my_errors.h  my_util.c  my_util.h  obrada_signala.py  prepare_build.sh  programming_cmds  sdcard.c  sdcard.h  signal.py  smpb.c  smpb.h  twi.c  twi.h  uart.c  uart.h
cmake/: arm-none-eabi.cmake  nrf5_helpers.cmake
config/: sdk_config.h
nrf_sdk_16/components/boards/: boards.h  iatwa.h
nrf_sdk_16/components/libraries/uart/: app_uart_fifo.c
nrf_sdk_16/components/toolchain/gcc/: Makefile.posix
